[package]
name = "sarkhati"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "default-tls"] }
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3.31"
chrono = "0.4"
chrono-tz = "0.10"
